--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Weather App</title>
+    <link rel="stylesheet" href="./App.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
