--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
     -->
     <title>Weather App</title>
     <link rel="stylesheet" href="./App.css">
+    <script src="App.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
